--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -78,12 +78,12 @@
                   </LinearGradient>
                </fill>
             </Rectangle>
+            <ImageView fitHeight="33.0" fitWidth="39.0" layoutX="167.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/health-care.png" />
+               </image>
+            </ImageView>
          </children></Pane>
-      <ImageView fitHeight="33.0" fitWidth="33.0" layoutX="602.0" layoutY="280.0" pickOnBounds="true">
-         <image>
-            <Image url="@../../../images/health-care.png" />
-         </image>
-      </ImageView>
       <Label fx:id="speciesNameInSelectPlantScene" alignment="CENTER" layoutX="499.0" layoutY="192.0" prefHeight="17.0" prefWidth="104.0" text="asd" textAlignment="CENTER">
          <font>
             <Font size="15.0" />
@@ -110,7 +110,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="239.0" layoutX="56.0" layoutY="115.0" stroke="#00fff2" strokeType="INSIDE" width="266.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="239.0" layoutX="56.0" layoutY="117.0" stroke="#00fff2" strokeType="INSIDE" width="266.0">
          <fill>
             <LinearGradient endX="1.0" endY="1.0">
                <stops>
@@ -127,7 +127,11 @@
                </stops>
             </LinearGradient>
          </fill></Rectangle>
-      <ImageView fitHeight="235.0" fitWidth="266.0" layoutX="56.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="237.0" fitWidth="262.0" layoutX="58.0" layoutY="117.0" pickOnBounds="true">
+         <image>
+            <Image url="@../../../images/cactuslevel4/cactuslevel4sponge.png" />
+         </image>
+      </ImageView>
       <AmbientLight layoutX="383.0" layoutY="234.0" lightOn="true">
          <color>
             <Color red="0.501960813999176" green="1.0" />
