--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -148,14 +148,6 @@
             </LinearGradient>
          </fill></Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="226.0" layoutX="410.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" width="183.0" />
-      <Label fx:id="plantLeveltwo" alignment="CENTER" layoutX="292.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
-         <font>
-            <Font name="Arial Black" size="12.0" />
-         </font></Label>
-      <Label fx:id="levelPlantOne" alignment="CENTER" layoutX="91.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
-         <font>
-            <Font name="Arial Black" size="12.0" />
-         </font></Label>
       <ImageView fx:id="imagePlantOne" fitHeight="155.0" fitWidth="171.0" layoutX="17.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="imagePlantTwo" fitHeight="155.0" fitWidth="170.0" layoutX="217.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ProgressBar fx:id="plantWaterBarOne" layoutX="14.0" layoutY="246.0" prefHeight="17.0" prefWidth="171.0" progress="0.78" visible="false" />
@@ -333,7 +325,18 @@
          </ripplerFill>
       </JFXButton>
       <ImageView fx:id="imagePlantThree" fitHeight="155.0" fitWidth="170.0" layoutX="417.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="plantLevelThree" layoutX="490.0" layoutY="94.0" />
+      <Label fx:id="plantLeveltwo" alignment="CENTER" layoutX="292.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Label>
+      <Label fx:id="levelPlantOne" alignment="CENTER" layoutX="91.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Label>
+      <Label fx:id="plantLevelThree" alignment="CENTER" layoutX="496.0" layoutY="94.0" prefHeight="17.0" prefWidth="17.0" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Black" size="12.0" />
+         </font></Label>
 
    </children>
    <effect>
