--- a/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
@@ -53,7 +53,7 @@
             <Font size="11.0" />
          </font>
       </Button>
-      <Label fx:id="levelInWidgetScene" layoutX="71.0" layoutY="2.0" prefHeight="17.0" prefWidth="12.0" textAlignment="CENTER">
+      <Label fx:id="levelInWidgetScene" alignment="CENTER" layoutX="64.0" layoutY="2.0" prefHeight="25.0" prefWidth="25.0" textAlignment="CENTER">
          <font>
             <Font name="Arial Black" size="12.0" />
          </font></Label>
