--- a/src/main/resources/com/example/plantwidget_g18_gui/legendary_pop-up.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/legendary_pop-up.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="206.0" prefWidth="473.0" style="-fx-background-color: #908641;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
+<AnchorPane prefHeight="206.0" prefWidth="473.0" style="-fx-background-color: #908641;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="52.0" layoutX="-7.0" stroke="TRANSPARENT" strokeType="INSIDE" width="495.0">
          <fill>
