--- a/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="181.0" prefWidth="152.0" style="-fx-background-color: #92eaa9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="181.0" prefWidth="152.0" style="-fx-background-color: #92eaa9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="181.0" stroke="#00fff2" strokeType="INSIDE" width="152.0">
          <fill>
